--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,32 @@
     <groupId>groepI</groupId>
     <artifactId>groepI</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
 
+        <!-- Spring framework -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring</artifactId>
+            <version>2.5.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate</artifactId>
+            <version>3.5.4-Final</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-core</artifactId>
+            <version>2.3.8</version>
+        </dependency>
+
+
+
+    </dependencies>
     
 </project>
