--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>groepI</groupId>
     <artifactId>groepI</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>gitTest</module>
+    </modules>
     <dependencies>
 
         <!-- Spring framework -->
