--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,13 @@
-# Root logger option
-log4j.rootLogger=INFO, stdout
+### Root logging level
+log4j.rootLogger=debug, stdout
 
-# Direct log messages to stdout
+### Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+
+### hibernate logging level
+log4j.logger.org.hibernate=info
+
+### MySQL logging level
+log4j.logger.org.hibernate.SQL=debug
