--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <java-version>1.7</java-version>
         <org.springframework-version>3.0.6.RELEASE</org.springframework-version>
         <org.slf4j-version>1.6.1</org.slf4j-version>
+        <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
     </properties>
     <dependencies>
         <!-- Spring -->
