Removed duplicate dependancies Pom Changed Log4j level to error Changed testGetUser()

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 ### Root logging level
-log4j.rootLogger=debug, stdout
+log4j.rootLogger=error, stdout
 
 ### Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -7,7 +7,7 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 ### hibernate logging level
-log4j.logger.org.hibernate=info
+log4j.logger.org.hibernate=error
 
 ### MySQL logging level
-log4j.logger.org.hibernate.SQL=debug
+log4j.logger.org.hibernate.SQL=error
