--- a/pom.xml
+++ b/pom.xml
@@ -145,8 +145,11 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>4.1.9.Final</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-firefox-driver</artifactId>
+            <version>2.28.0</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
