--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,4 +18,14 @@
         <servlet-name>appServlet</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error/pagenotfound</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error/internalsystemerror</location>
+    </error-page>
+
 </web-app>
