--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
         <org.springframework-version>3.0.6.RELEASE</org.springframework-version>
         <org.slf4j-version>1.6.1</org.slf4j-version>
         <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
+        <spring-social-core.version>1.0.2.RELEASE</spring-social-core.version>
+        <spring-social-web.version>1.0.2.RELEASE</spring-social-web.version>
+        <spring-social-facebook.version>1.0.2.RELEASE</spring-social-facebook.version>
     </properties>
     <dependencies>
         <!-- Spring -->
@@ -20,7 +23,6 @@
             <artifactId>spring-core</artifactId>
             <version>${org.springframework-version}</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.springframework</groupId>
@@ -39,6 +41,8 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${org.springframework-version}</version>
         </dependency>
+
+        <!-- Spring Security -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
@@ -53,6 +57,23 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
             <version>3.1.3.RELEASE</version>
+        </dependency>
+
+        <!-- Spring Social -->
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-core</artifactId>
+            <version>${spring-social-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-web</artifactId>
+            <version>${spring-social-web.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-facebook</artifactId>
+            <version>${spring-social-facebook.version}</version>
         </dependency>
 
         <!-- Hibernate -->
