--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>spring-security-web</artifactId>
             <version>3.1.3.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>3.1.3.RELEASE</version>
+        </dependency>
+
 
         <!-- Spring Social -->
         <dependency>
