--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,21 @@
             <version>3.2.1.RELEASE</version>
         </dependency>
 
+        <!-- Android -->
+
+        <dependency>
+            <groupId>org.springframework.android</groupId>
+            <artifactId>spring-android-rest-template</artifactId>
+            <version>1.0.1.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.android</groupId>
+            <artifactId>spring-android-core</artifactId>
+            <version>1.0.1.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
     <repositories>
         <repository>
