--- a/pom.xml
+++ b/pom.xml
@@ -220,7 +220,7 @@
 
         <!-- Android -->
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.android</groupId>
             <artifactId>spring-android-rest-template</artifactId>
             <version>1.0.1.RELEASE</version>
@@ -230,7 +230,7 @@
             <groupId>org.springframework.android</groupId>
             <artifactId>spring-android-core</artifactId>
             <version>1.0.1.RELEASE</version>
-        </dependency>
+        </dependency>-->
 
 
     </dependencies>
