--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,13 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.22</version>
         </dependency>
+        
+        <!-- HSQLDB -->
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.2.9</version>
+        </dependency>
 
         <!-- CGLIB, only required and used for @Configuration usage -->
         <dependency>
@@ -338,6 +345,59 @@
                     </reportPlugins>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.0.2</version>
+                <configuration>
+                    <webResources>
+                        <resource>
+                            <filtering>true</filtering>
+                            <directory>src/main/webapp</directory>
+                            <includes>
+                                <include>**/*.xml</include>
+                                <!-- include any other file types you want to filter -->
+                            </includes>
+                        </resource>
+                    </webResources>
+                </configuration>
+            </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
     </build>
+    
+    <profiles>
+        <profile>
+            <!-- Test environment @ localhost -->
+            <id>test</id>
+            <properties>
+                <db.driverClass>org.hsqldb.jdbcDriver</db.driverClass>
+                <db.connectionURL>jdbc:hsqldb:mem:test_db</db.connectionURL>
+                <db.dialect>org.hibernate.dialect.HSQLDialect</db.dialect> 
+                <db.username>sa</db.username>
+                <db.password></db.password>
+                <db.hbm2ddl>create-drop</db.hbm2ddl>
+            </properties>
+        </profile>
+        <!-- Production environment @ production server -->
+        <profile>
+            <id>production</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>  
+                <db.driverClass>com.mysql.jdbc.Driver</db.driverClass>
+                <db.connectionURL>jdbc:mysql://mysql.vincentverbist.be:3306/trippidb</db.connectionURL>
+                <db.dialect>org.hibernate.dialect.MySQLDialect</db.dialect> 
+                <db.username>groepi_user</db.username>
+                <db.password>groepi_pass</db.password>            
+                <db.hbm2ddl></db.hbm2ddl>
+            </properties>
+        </profile>
+    </profiles>
 </project>
