--- a/pom.xml
+++ b/pom.xml
@@ -8,26 +8,40 @@
     <packaging>war</packaging>
     <version>1.0.0-BUILD-SNAPSHOT</version>
     <properties>
-        <java-version>1.7</java-version>
-        <org.springframework-version>3.0.6.RELEASE</org.springframework-version>
-        <org.slf4j-version>1.6.1</org.slf4j-version>
-        <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
-        <spring-social-core.version>1.0.2.RELEASE</spring-social-core.version>
-        <spring-social-web.version>1.0.2.RELEASE</spring-social-web.version>
-        <spring-social-facebook.version>1.0.2.RELEASE</spring-social-facebook.version>
+
     </properties>
     <dependencies>
+        <!-- Android -->
+
+        <dependency>
+            <groupId>org.springframework.android</groupId>
+            <artifactId>spring-android-rest-template</artifactId>
+            <version>1.0.1.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.android</groupId>
+            <artifactId>spring-android-core</artifactId>
+            <version>1.0.1.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>1.7.1</version>
+        </dependency>
+
         <!-- Spring -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>${org.springframework-version}</version>
+            <version>3.2.1.RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>${org.springframework-version}</version>
+            <version>3.1.2.RELEASE</version>
             <exclusions>
                 <!-- Exclude Commons Logging in favor of SLF4j -->
                 <exclusion>
@@ -39,7 +53,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>${org.springframework-version}</version>
+            <version>3.1.2.RELEASE</version>
         </dependency>
 
         <!-- Spring Security -->
@@ -69,17 +83,17 @@
         <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-core</artifactId>
-            <version>${spring-social-core.version}</version>
+            <version>1.0.2.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-web</artifactId>
-            <version>${spring-social-web.version}</version>
+            <version>1.0.2.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-facebook</artifactId>
-            <version>${spring-social-facebook.version}</version>
+            <version>1.0.2.RELEASE</version>
         </dependency>
 
         <!-- Hibernate -->
@@ -105,7 +119,7 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.22</version>
         </dependency>
-        
+
         <!-- HSQLDB -->
         <dependency>
             <groupId>org.hsqldb</groupId>
@@ -225,20 +239,7 @@
             <version>3.2.1.RELEASE</version>
         </dependency>
 
-        <!-- Android -->
-        <!--
-        <dependency>
-            <groupId>org.springframework.android</groupId>
-            <artifactId>spring-android-rest-template</artifactId>
-            <version>1.0.1.RELEASE</version>
-        </dependency>
-           k
-        <dependency>
-            <groupId>org.springframework.android</groupId>
-            <artifactId>spring-android-core</artifactId>
-            <version>1.0.1.RELEASE</version>
-        </dependency>
-        -->
+
     </dependencies>
     <repositories>
         <repository>
