--- a/TrippieApp/AndroidManifest.xml
+++ b/TrippieApp/AndroidManifest.xml
@@ -3,21 +3,19 @@
           package="com.activities"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-sdk android:minSdkVersion="14"/>
     <application
             android:label="@string/app_name"
             android:icon="@drawable/ic_launcher">
         <activity
-                android:name=".LoginActivity"
+                android:name="LoginActivity"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity
-                android:name=".UserTripsActivity"
-                android:label="User Trips"/>
+        <activity android:name=".UserTripsActivity"/>
     </application>
 </manifest>
