--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
 
     </properties>
     <dependencies>
+            <!--  Gson: Java to Json conversion -->
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.2.2</version>
+                <scope>compile</scope>
+            </dependency>
         <!-- Spring -->
         <dependency>
             <groupId>org.springframework</groupId>
