--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0.0-BUILD-SNAPSHOT</version>
     <properties>
         <java-version>1.7</java-version>
-        <org.springframework-version>3.0.6.RELEASE</org.springframework-version>
+        <org.springframework-version>3.1.3.RELEASE</org.springframework-version>
         <org.slf4j-version>1.6.1</org.slf4j-version>
         <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
 
@@ -23,17 +23,17 @@
                 <scope>compile</scope>
             </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.android</groupId>
             <artifactId>spring-android-rest-template</artifactId>
             <version>1.0.1.RELEASE</version>
         </dependency>
-        <!-- Spring -->
+        &lt;!&ndash; Spring &ndash;&gt;
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>${org.springframework-version}</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>org.springframework</groupId>
