Invite friends for instance by mail + css buttons

--- a/TrippieApp/AndroidManifest.xml
+++ b/TrippieApp/AndroidManifest.xml
@@ -17,6 +17,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".UserTripsActivity"/>
-        <activity android:name=".ShowTripActivity"/>
+        <activity android:name=".TripDetailActivity"/>
     </application>
 </manifest>
