--- a/pom.xml
+++ b/pom.xml
@@ -9,20 +9,27 @@
     <version>1.0.0-BUILD-SNAPSHOT</version>
     <properties>
         <java-version>1.7</java-version>
-        <org.springframework-version>3.1.3.RELEASE</org.springframework-version>
+        <org.springframework-version>3.2.1.RELEASE</org.springframework-version>
+        <org.springframework-security-version>3.2.0.CI-SNAPSHOT</org.springframework-security-version>
         <org.slf4j-version>1.6.1</org.slf4j-version>
-        <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
-
-    </properties>
+    </properties>  
+    
     <dependencies>
-            <!--  Gson: Java to Json conversion -->
-            <dependency>
-                <groupId>com.google.code.gson</groupId>
-                <artifactId>gson</artifactId>
-                <version>2.2.2</version>
-                <scope>compile</scope>
-            </dependency>
+        <!--  Gson: Java to Json conversion -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.2</version>
+            <scope>compile</scope>
+        </dependency>
 
+        <!-- Java EE 6.0 -->
+        <dependency>
+            <groupId>org.glassfish.main.extras</groupId>
+            <artifactId>javaee</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+        
         <!--<dependency>
             <groupId>org.springframework.android</groupId>
             <artifactId>spring-android-rest-template</artifactId>
@@ -35,6 +42,7 @@
             <version>${org.springframework-version}</version>
         </dependency>-->
 
+        <!-- Spring Framework-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
@@ -52,27 +60,56 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${org.springframework-version}</version>
         </dependency>
-
-        <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>3.2.1.RELEASE</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${org.springframework-version}</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${org.springframework-version}</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+        
+        <!-- Spring Framework Security -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
-            <version>3.1.3.RELEASE</version>
+            <version>${org.springframework-security-version}</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
-            <version>3.1.3.RELEASE</version>
+            <version>${org.springframework-security-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-            <version>3.1.3.RELEASE</version>
+            <version>${org.springframework-security-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-taglibs</artifactId>
-            <version>3.1.3.RELEASE</version>
+            <version>${org.springframework-security-version}</version>
         </dependency>
 
         <!-- Hibernate -->
@@ -114,18 +151,10 @@
         </dependency>
 
         <!-- Logging -->
-
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
-        </dependency>
-
-        <!-- @Inject -->
-        <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
-            <version>1</version>
         </dependency>
 
         <!-- Servlet -->
@@ -154,7 +183,6 @@
             <version>4.7</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -212,11 +240,7 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <version>3.2.1.RELEASE</version>
-        </dependency>
+
     </dependencies>
     <repositories>
         <repository>
@@ -276,6 +300,11 @@
                 <version>2.13</version>
                 <configuration>
                     <argLine>-XX:-UseSplitVerifier</argLine>
+                    <!--<classpathDependencyExcludes>
+                         exclude code absent api 
+                    <classpathDependencyExclude>javax:javaee-api</classpathDependencyExclude>
+                        <classpathDependencyExclude>javax:javaee-web-api</classpathDependencyExclude>
+                    </classpathDependencyExcludes>-->
                 </configuration>
             </plugin>
             <plugin>
