--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <properties>
         <java-version>1.7</java-version>
         <org.springframework-version>3.2.1.RELEASE</org.springframework-version>
-        <org.springframework-security-version>3.2.0.CI-SNAPSHOT</org.springframework-security-version>
+        <org.springframework-security-version>3.1.3.RELEASE</org.springframework-security-version>
         <org.slf4j-version>1.6.1</org.slf4j-version>
     </properties>  
     
