--- a/TrippieApp/AndroidManifest.xml
+++ b/TrippieApp/AndroidManifest.xml
@@ -3,6 +3,10 @@
           package="com.activities"
           android:versionCode="1"
           android:versionName="1.0">
+    <permission android:name="com.activities.LoginActivity.permission.MAPS_RECEIVE"
+                android:protectionLevel="signature"/>
+
+    <uses-permission android:name="com.activities.LoginActivity.permission.MAPS_RECEIVE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-sdk android:minSdkVersion="14"/>
     <application
@@ -18,5 +22,8 @@
         </activity>
         <activity android:name=".UserTripsActivity"/>
         <activity android:name=".TripDetailActivity"/>
+        <meta-data android:name="com.google.android.maps.v2.API_KEY"
+                   android:value="AIzaSyBqS9hK_j7vBk-8z4Rddok8fY5avJDugGs"/>
+        <uses-library android:name="com.google.android.maps"/>
     </application>
 </manifest>
