Aanpassingen filler, web.xml, nl_properties

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -39,6 +39,10 @@
         <error-code>404</error-code>
         <location>/error/pagenotfound</location>
     </error-page>
+    <error-page>
+        <error-code>405</error-code>
+        <location>/error/requestmethoderror</location>
+    </error-page>
     <!--    <error-page>
             <error-code>500</error-code>
             <location>/error/internalsystemerror</location>
